# Comfyui-PiD

./: .gitignore  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
core/: compat.py  pid_model_manager.py
pid_core/_ext/imaginaire/: config.py  model.py
pid_core/_ext/imaginaire/checkpointer/: base.py  dcp.py  dummy.py  s3_filesystem.py
pid_core/_ext/imaginaire/lazy_config/: __init__.py  instantiate.py  lazy.py
pid_core/_ext/imaginaire/utils/: config_helper.py  distributed.py  misc.py  s3_utils.py  validator_params.py
pid_core/_ext/imaginaire/utils/easy_io/: easy_io.py  file_client.py
pid_core/_ext/imaginaire/visualize/: __init__.py  video.py
pid_core/_src/configs/pid/: config.py
pid_core/_src/inference/: _demo_common.py  _demo_from_clean_common.py  create_dataset.py  from_clean_dinov2.py  from_clean_flux.py  from_clean_flux2.py  from_clean_sd3.py  from_clean_siglip.py  from_ldm_dinov2.py  from_ldm_flux.py  from_ldm_flux2.py  from_ldm_sd3.py  from_ldm_siglip.py  from_ldm_zimage.py  scale_rae_generation.py
pid_core/_src/models/: pid_distill_model.py  pid_model.py  pixeldit_model.py  utils.py
pid_core/_src/modules/: conditioner.py
pid_core/_src/networks/: lq_projection_2d.py  pid_net.py  pixeldit_official.py
pid_core/_src/tokenizers/: base_vae.py  dinov2_vae.py  flux2_vae.py  flux_vae.py  interface.py  scale_rae_vae.py
pid_core/_src/utils/: context_parallel.py  model_loader.py
pretrained/text_encoder/gemma-2-2b-it/: config.json  generation_config.json
scripts/: download_text_encoder.py
(+45 files in other folders)
